--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <link rel="stylesheet" href="./assets/css/bootstrap.min.css" type="text/css" media="all" />
-        <script src="./assets/js/bootstrap.min.js"></script>
-
+       <script src="./assets/js/jquery.js"></script>
+      <script src="./assets/js/bootstrap.min.js"></script>
+       
         <title>Basic of React</title>
 
         <body>
